

syntax = "proto3";

package pb;

option go_package = "./;pb";

message RaftMessageReq {
    uint32 shardID = 1;
    bytes message = 2;
}


// message ReplicaMeta {
//     uint64 id = 1;  // 副本ID
//     repeated uint64 voters = 3; // 副本的所有投票者
//     repeated  uint64 learners = 4;  // 副本的所有学习者
//     uint64 term = 6; // 副本的任期
//     uint64 commit = 7; // 副本的提交位置
// }